turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:11: error: not found: value levebrosse
      levebrosse()
      ^